--- a/distributor/manpro.html
+++ b/distributor/manpro.html
@@ -287,7 +287,7 @@
                                 <span>Products</span> </a>
                             <ul class="sub-menu" aria-expanded="false">
                                 <li><a href="add_products.php">Add Products</a></li>
-                                <li><a href="products.php">View Products</a></li>
+                                <li><a href="products.php">View Product</a></li>
 
                             </ul>
                         </li>
