--- a/customer/search.html
+++ b/customer/search.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>search products</title>
+    <title>Search products</title>
 
     <style>
       body {
