change password to edit profile

--- a/distributor/manpro.html
+++ b/distributor/manpro.html
@@ -210,7 +210,7 @@
                                 class="d-none d-xl-inline-block ms-1 fw-medium font-size-15">Admin</span> <i
                                 class="uil-angle-down d-none d-xl-inline-block font-size-15"></i> </button>
                         <div class="dropdown-menu dropdown-menu-end">
-                            <!-- item--><a class="dropdown-item" href="#"><i
+                            <!-- item--><a class="dropdown-item" href="edit_profile.php"><i
                                     class="uil uil-user-circle font-size-18 align-middle text-muted me-1"></i> <span
                                     class="align-middle">View Profile</span></a>  <a class="dropdown-item" href="logout.php"><i
                                     class="uil uil-sign-out-alt font-size-18 align-middle me-1 text-muted"></i> <span
